--- a/Application/python_webapp_flask/templates/index.html
+++ b/Application/python_webapp_flask/templates/index.html
@@ -13,16 +13,16 @@
             </a>
         </div>
         <div class="content-body">
-            <div class="success-text">Success!</div>
-            <div class="description line-1"> GitHub workflow has been successfully setup</div>
-            <div class="description line-2"> Your Python Flask app is up and running on Azure</div>
+            <div class="success-text">Perfect Start to coding!</div>
+            <div class="description line-1"> Now we could continue with that</div>
+            <div class="description line-2"> Python Flask app it's ready to deploy</div>
         </div>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Get started right away </h2>
+        <h2>For now it's Perfect </h2>
         <p>
             Clone your code repository and start developing your application on IDE of your choice
         </p>
