--- a/Application/python_webapp_flask/templates/index.html
+++ b/Application/python_webapp_flask/templates/index.html
@@ -13,9 +13,9 @@
             </a>
         </div>
         <div class="content-body">
-            <div class="success-text">Perfect Start to coding!</div>
-            <div class="description line-1"> Now we could continue with that</div>
-            <div class="description line-2"> Python Flask app it's ready to deploy</div>
+            <div class="success-text">2work Project landing!!</div>
+            <div class="description line-1"> Work simple </div>
+            <div class="description line-2"> We thrive together</div>
         </div>
     </div>
 </div>
